add JS functions to alter array unshift, shift, push, pop

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <table>
       <td><input type="text" id="newValue"/></td>
-      <td><input type="button" id="arrayPush" value="Add to End" onclick="arrayPush()"></td>
-      <td><input type="button" id="arrayPop" value="Remove from End" onclick="arrayPop()"></td>
-      <td><input type="button" id="arrayUnshift" value="Add to Front" onclick="arrayUnshift()"></td>
-      <td><input type="button" id="arrayShift" value="Remove from Front" onclick="arrayShift()"></td>
+      <td><input type="button" value="Add to End" onclick="arrayPush()"></td>
+      <td><input type="button" value="Remove from End" onclick="arrayPop()"></td>
+      <td><input type="button" value="Add to Front" onclick="arrayUnshift()"></td>
+      <td><input type="button" value="Remove from Front" onclick="arrayShift()"></td>
     </table>
     
     <hr>
